Fix alignements of blocks in group block
Closes #563.

--- a/assets/css/src/content.css
+++ b/assets/css/src/content.css
@@ -81,6 +81,12 @@
 	max-width: var(--content-width);
 }
 
+.wp-block-group__inner-container > * {
+	margin-right: auto;
+	margin-left: auto;
+	max-width: var(--content-width);
+}
+
 @media (--content-query) {
 
 	.page-content > *,
@@ -168,6 +174,12 @@
 .alignfull {
 	max-width: 100%;
 	padding: 0;
+}
+
+.wp-block-group .alignfull,
+.wp-block-group.alignwide .alignwide,
+.wp-block-group.alignwide .alignfull {
+	max-width: 100%;
 }
 
 /*--------------------------------------------------------------
